Adiciona os cards de maneira funcional nas páginas de comidas e bebidas, requisitos 25 e 26.

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+.item-card {
+  padding: 10%;
+  text-align: center;
+}
+
+.item-card img {
+  width: 80%;
+}
+
 .meals {
   align-items: center;
   background: #0fa36b;
