--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .explore-button {
   background-color: lightblue;
-  border-style: solid;
   border-color: lightcyan;
   border-radius: 5px;
-  color: white;
+  border-style: solid;
+  color: black;
   font-size: 30px;
+  font-weight: 400;
   margin: 10px;
   padding: 10px 20px;
   text-decoration: none;
@@ -18,10 +19,10 @@
 }
 
 .item-card {
-  background-color:lightblue;
-  border-style: solid;
+  background-color: lightblue;
   border-color: lightcyan;
   border-radius: 10px;
+  border-style: solid;
   margin: 5% 0;
   padding: 10px;
   text-align: center;
@@ -86,6 +87,11 @@
   font-family: Montserrat , sans-serif;
   font-size: 3em;
   font-weight: 900;
+}
+
+a {
+  color: black;
+  text-decoration: none;
 }
 
 @keyframes shake {
