--- a/src/styles/explore.css
+++ b/src/styles/explore.css
@@ -1,21 +1,15 @@
-.btns-profile {
+.explore-container {
+  align-items: center;
   display: flex;
   flex-direction: column;
+  margin-top: 40%;
 }
 
-.btns-profile button {
+.explore-button {
   background-color: lightblue;
   border-radius: 10px;
   font-size: 20px;
   margin: 10px auto;
   padding: 10px;
-  width: 70%;
-}
-
-.btns-profile h3 {
-  font-size: 20px;
-  margin: 70px auto;
-  overflow-wrap: break-word;
-  text-align: center;
   width: 70%;
 }
