tela de explorar comida por area. incompleto

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -7,18 +7,29 @@
 .header {
   align-items: center;
   background-color: lightblue;
-  display: grid;
-  grid-template-columns: 41% 50% 0%;
+  display: flex;
   padding: 10px;
+  position: relative;
   width: 100%;
 }
 
 .header button {
-  width: fit-content;
   background: none;
   border-style: none;
+  width: fit-content;
+}
+
+.btn-profile {
+  left: 2%;
+  position: absolute;
 }
 
 .header-title {
-  margin-top: 3.5px;
+  text-align: center;
+  width: 100%;
+}
+
+.btn-search {
+  position: absolute;
+  right: 2%;
 }
