--- a/src/styles/explore.css
+++ b/src/styles/explore.css
@@ -13,3 +13,15 @@
   padding: 10px;
   width: 70%;
 }
+
+.select-option, .select-option select {
+  margin: 5px auto;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.select-option select {
+  width: 90%;
+  height: 25px;
+  font-size: 17px;
+}
