--- a/src/styles/itemCard.css
+++ b/src/styles/itemCard.css
@@ -6,10 +6,21 @@
   margin: 5% 0;
   padding: 10px;
   text-align: center;
-  width: 150px;
+  width: 160px;
 }
 
 .item-card img {
+  width: 100%;
+}
+
+.item-card h4 {
+  align-items: center;
+  display: flex;
+  flex-grow: 1;
+  height: 100px;
+  justify-content: center;
+  margin: 0;
+  text-align: center;
   width: 100%;
 }
 
@@ -18,8 +29,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  margin: 0 auto;
   margin-bottom: 50px;
   padding-bottom: 60px;
+  width: 100%;
 }
 
 .footer-style {
@@ -35,6 +48,9 @@
 .category-list {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 5px auto 0;
+  width: 95%;
 }
 
 .category-list button {
@@ -42,5 +58,5 @@
   border-radius: 5px;
   height: 35px;
   margin: 2px auto;
-  width: 100px;
+  width: 32%;
 }
