--- a/src/styles/itemCard.css
+++ b/src/styles/itemCard.css
@@ -1,12 +1,34 @@
+.img-details img {
+  width: 360px;
+}
+
 .item-card {
   background-color: lightblue;
   border-color: lightcyan;
   border-radius: 10px;
   border-style: solid;
+  display: inline-block;
   margin: 5% 0;
   padding: 10px;
   text-align: center;
   width: 160px;
+}
+
+.recomended {
+  margin: auto;
+  width: 340px;
+}
+
+.recomended h3 {
+  margin-top: 15px;
+  text-align: center;
+}
+
+.player-video {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  width: 100%;
 }
 
 .item-card img {
@@ -26,12 +48,40 @@
 
 .item-card-container {
   align-items: center;
+  align-self: flex-start;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   margin: 0 auto;
   margin-bottom: 50px;
+  overflow-x: scroll;
   padding-bottom: 60px;
+  width: 100%;
+}
+
+.item-card-cont-details {
+  align-items: baseline;
+  display: block;
+  overflow: scroll;
+  white-space: nowrap;
+  width: 100%;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: darkgrey;
+  border-radius: 100px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 100px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.item-card-details img {
   width: 100%;
 }
 
