--- a/src/styles/doneRecipes.css
+++ b/src/styles/doneRecipes.css
@@ -1,14 +1,14 @@
 .doneRecipe img {
-  width: 150px;
   margin: 15px 2px;
+  width: 150px;
 }
 
 .doneRecipe {
-  height: 180px;
+  box-shadow: 10px 6px 10px lightblue , -0.3em 0 0.4em lightblue;
   display: flex;
+  height: 180px;
   margin: 15px auto;
   width: 350px;
-  box-shadow: 10px 6px 10px lightblue, -.3em 0 .4em lightblue;
 }
 
 .top-text p {
@@ -39,9 +39,9 @@
 .share-btn {
   background-color: transparent;
   border-style: none;
-  width: 18px;
   height: 18px;
   margin: 10px 4px 0 0;
+  width: 18px;
 }
 
 .head-done {
@@ -75,6 +75,6 @@
 }
 
 .tags p {
-  width: fit-content;
   margin-right: 2px;
+  width: fit-content;
 }
